// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ComingSoonRow > snapshot > should match the snapshot across all variants > with hint 1`] = `
<div>
  <div
    class="flex flex-col gap-2 border-b border-rule/60 py-4 md:grid md:grid-cols-[1fr_auto] md:items-center md:gap-8 cursor-not-allowed opacity-60"
    data-testid="coming-soon-row"
  >
    <div>
      <div
        class="text-[14px] font-medium text-ink"
        data-testid="coming-soon-row-label"
      >
        Sync
      </div>
      <div
        class="mt-1 max-w-[520px] font-serif text-[13px] italic text-ink-3"
        data-testid="coming-soon-row-hint"
      >
        cloud sync
      </div>
    </div>
    <div>
      <div
        class="flex items-center gap-3"
      >
        <span
          class="inline-flex items-center gap-2 font-sans opacity-50"
        >
          <span
            class="relative inline-flex h-[14px] w-[14px] shrink-0 items-center justify-center"
          >
            <input
              aria-disabled="true"
              aria-label="Sync"
              class="peer h-[14px] w-[14px] cursor-pointer appearance-none border border-rule bg-paper transition-colors checked:border-ink checked:bg-ink focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ink disabled:cursor-not-allowed"
              data-testid="coming-soon-row-checkbox"
              disabled=""
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              class="lucide lucide-check pointer-events-none absolute h-[10px] w-[10px] text-paper opacity-0 peer-checked:opacity-100"
              data-testid="coming-soon-row-checkbox-box"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </span>
        <button
          aria-label="What is this?"
          class="inline-flex items-center justify-center rounded-md transition-colors text-ink-3 hover:bg-paper-2 hover:text-ink focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ink data-[state=open]:bg-paper-2 data-[state=open]:text-ink h-5 w-5"
          data-state="closed"
          data-testid="coming-soon-row-help"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-question-mark h-3.5 w-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
            />
            <path
              d="M12 17h.01"
            />
          </svg>
        </button>
        <span
          class="inline-block rounded-sm bg-paper-2 px-1.5 py-0.5 font-mono text-[9px] uppercase tracking-wider text-ink-3"
          data-testid="coming-soon-badge"
        >
          coming soon
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ComingSoonRow > snapshot > should match the snapshot across all variants > without hint 1`] = `
<div>
  <div
    class="flex flex-col gap-2 border-b border-rule/60 py-4 md:grid md:grid-cols-[1fr_auto] md:items-center md:gap-8 cursor-not-allowed opacity-60"
    data-testid="coming-soon-row"
  >
    <div>
      <div
        class="text-[14px] font-medium text-ink"
        data-testid="coming-soon-row-label"
      >
        Sync
      </div>
    </div>
    <div>
      <div
        class="flex items-center gap-3"
      >
        <span
          class="inline-flex items-center gap-2 font-sans opacity-50"
        >
          <span
            class="relative inline-flex h-[14px] w-[14px] shrink-0 items-center justify-center"
          >
            <input
              aria-disabled="true"
              aria-label="Sync"
              class="peer h-[14px] w-[14px] cursor-pointer appearance-none border border-rule bg-paper transition-colors checked:border-ink checked:bg-ink focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ink disabled:cursor-not-allowed"
              data-testid="coming-soon-row-checkbox"
              disabled=""
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              class="lucide lucide-check pointer-events-none absolute h-[10px] w-[10px] text-paper opacity-0 peer-checked:opacity-100"
              data-testid="coming-soon-row-checkbox-box"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </span>
        <button
          aria-label="What is this?"
          class="inline-flex items-center justify-center rounded-md transition-colors text-ink-3 hover:bg-paper-2 hover:text-ink focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ink data-[state=open]:bg-paper-2 data-[state=open]:text-ink h-5 w-5"
          data-state="closed"
          data-testid="coming-soon-row-help"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-question-mark h-3.5 w-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
            />
            <path
              d="M12 17h.01"
            />
          </svg>
        </button>
        <span
          class="inline-block rounded-sm bg-paper-2 px-1.5 py-0.5 font-mono text-[9px] uppercase tracking-wider text-ink-3"
          data-testid="coming-soon-badge"
        >
          coming soon
        </span>
      </div>
    </div>
  </div>
</div>
`;
